--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,8 @@
 </form> -->
 
 
-<form method="POST">
+
+<!-- <form method="POST">
     <div class="form-group">
         <label for="exampleInputTitle">Title</label>
         <input type="text" class="form-control" id="exampleInputTitle" placeholder="Title"
@@ -35,7 +36,7 @@
         <textarea class="form-control" id="exampleFormControlTextarea" rows="4"></textarea>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</form> -->
 
 
 {% endblock %}
