--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,17 +24,13 @@
         {% block content %}{% endblock %}
     </div>
 
-
-
-    <div class="fixed-bottom">
-        <div class="container">
-            <div class="card">
-                <div class="card-body">
-                    {% block footer %}{% endblock %}
-                </div>
-            </div>
-        </div>
+    <div class="container">
+        {% block footer %}{% endblock %}
     </div>
+
+    {% block modal %}{% endblock %}
+
+
 
 
 
