--- a/app/templates/posts.html
+++ b/app/templates/posts.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-<div class="container mt-3">
+<div class="container mt-3 mb-5">
     <div class="row">
         {% for post in data.posts %}
         <div class="col-sm-6">
